fix whitespace homepage ui

--- a/src/app/doctors/doctors.component.scss
+++ b/src/app/doctors/doctors.component.scss
@@ -5,7 +5,7 @@
 
   .doctors {
     display: flex;
-    padding: 30px 0;
+    padding-bottom: 30px;
     overflow-x: scroll;
   
     .fa-chevron-left,
