--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,6 +108,8 @@ img {
 }
 
 .section-title {
+  padding-top: 60px;
+  padding-bottom: 40px;
   text-align: center;
   font-size: 2.5rem;
   font-weight: bold;
